--- a/workout-tracker/style.css
+++ b/workout-tracker/style.css
@@ -12,16 +12,16 @@ body {
   box-sizing: inherit;
 }
 
-.site-wrap {
-  max-width: 1200px;
-  margin: 70px auto;
+/*.site-wrap {
+  max-width: 1300px;
+  margin: 20px auto;
   background:white;
   padding:40px;
   text-align: justify;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.05);
   transform: scale(0.98);
   transition: transform 0.5s;
-}
+}*/
 
 body.fixed-nav .site-wrap {
   transform: scale(1);
